<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>fi.vm.sade.haku</groupId>
    <artifactId>haku</artifactId>
    <version>2016-09-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Haku :: Parent</name>

    <modules>
        <module>hakemus-api</module>
        <module>haku-app</module>
    </modules>

    <properties>
        <junit.version>4.11</junit.version>
        <spring.version>3.2.9.RELEASE</spring.version>
        <spring-security.version>3.1.3.RELEASE</spring-security.version>
        <jersey.version>1.17.1</jersey.version>
        <servlet.version>3.0.1</servlet.version>
        <mongo-driver.version>2.13.3</mongo-driver.version>
        <slf4j.version>1.7.6</slf4j.version>
        <log4j.version>1.2.17</log4j.version>
        <cxf.version>2.7.3</cxf.version>
        <cxf-common-utilities.version>2.5.9</cxf-common-utilities.version>
        <mockito.version>1.9.5</mockito.version>
        <guava.version>15.0</guava.version>
        <ehcache.version>2.5.0</ehcache.version>
        <flapdoodle.version>1.36</flapdoodle.version>
        <org.apache.tomcat.embed>7.0.39</org.apache.tomcat.embed>
        <jackson.version>2.3.0</jackson.version>
        <selenium.version>2.50.1</selenium.version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.build.timestamp.format>dd.MM.yyyy HH:mm</maven.build.timestamp.format>

        <springProfileName>default</springProfileName>

        <authentication-api.version>2016-04-SNAPSHOT</authentication-api.version>
        <generic-common.version>9.1-SNAPSHOT</generic-common.version>
	    <koodisto-api.version>11.5</koodisto-api.version>
        <koulutusinformaatio-api.version>2015-45-SNAPSHOT</koulutusinformaatio-api.version>
        <log-client.version>8.0</log-client.version>
        <organisaatio-api.version>2015-04</organisaatio-api.version>
        <tarjonta-api.version>2015-49-SNAPSHOT</tarjonta-api.version>
        <viestintapalvelu.version>9.8</viestintapalvelu.version>
        <auditlog.api.version>5.0.0-SNAPSHOT</auditlog.api.version>
    </properties>

    <repositories>
        <repository>
            <id>oph-sade-artifactory-snapshots</id>
            <url>https://artifactory.oph.ware.fi/artifactory/oph-sade-snapshot-local</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>oph-sade-artifactory-releases</id>
            <url>https://artifactory.oph.ware.fi/artifactory/oph-sade-release-local</url>
        </repository>
        <repository>
            <id>repository.jboss.org</id>
            <name>JBoss Repository</name>
            <url>http://repository.jboss.org/nexus/content/groups/public-jboss/</url>
        </repository>
        <repository>
            <id>public</id>
            <url>http://maven.nuxeo.org/nexus/content/repositories/public/</url>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>oph-sade-artifactory</id>
            <name>oph-sade-artifactory-releases</name>
            <url>https://artifactory.oph.ware.fi/artifactory/oph-sade-release-local</url>
        </repository>
        <snapshotRepository>
            <id>oph-sade-artifactory</id>
            <name>oph-sade-artifactory-snapshots</name>
            <url>https://artifactory.oph.ware.fi/artifactory/oph-sade-snapshot-local</url>
        </snapshotRepository>
    </distributionManagement>
    <build>
        <plugins>
           <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-enforcer-plugin</artifactId>
               <version>1.4</version>
              <executions>
                <execution>
                  <id>enforce-versions</id>
                  <goals>
                    <goal>enforce</goal>
                  </goals>
                  <configuration>
                    <rules>
                      <requireJavaVersion>
                        <version>[1.7,1.8.0-1000)</version>
                      </requireJavaVersion>
                    </rules>
                  </configuration>
                </execution>
              </executions>
            </plugin>
            <plugin>
                <inherited>true</inherited>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <configuration>
                    <webResources>
                        <resource>
                            <directory>../src/main/resources</directory>
                            <targetPath>WEB-INF/classes</targetPath>
                        </resource>
                    </webResources>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.13</version>
                <configuration>
                    <excludes>
                        <exclude>**/it/*</exclude>
                        <exclude>**/it/**/*</exclude>
                    </excludes>
                    <argLine>-Xms256M -Xmx1024M -XX:PermSize=256M</argLine>
                    <systemProperties>
                        <spring.profiles.active>dev</spring.profiles.active>
                        <application.system.cache>false</application.system.cache>
                    </systemProperties>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>it</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <version>2.13</version>
                        <configuration>
                            <argLine>-Xms512M -Xmx2048M -XX:PermSize=512M -Xss2M -Dfile.encoding=UTF-8</argLine>
                            <includes>
                                <include>**/it/*</include>
                                <include>**/it/**/*</include>
                                <include>**/selenium/*</include>
                                <include>**/selenium/**/*</include>
                            </includes>
                            <testFailureIgnore>false</testFailureIgnore>
                            <classpathDependencyExcludes>
                                <classpathDependencyExcludes>net.sf.saxon:Saxon-HE</classpathDependencyExcludes>
                            </classpathDependencyExcludes>
                            <systemProperties>
                                <spring.profiles.active>it</spring.profiles.active>
                                <application.system.cache>false</application.system.cache>
                            </systemProperties>
                        </configuration>
                        <executions>
                            <execution>
                                <id>integration-test</id>
                                <goals>
                                    <goal>integration-test</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>verify</id>
                                <goals>
                                    <goal>verify</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>

    </profiles>

</project>
